force-app/main/default/objects/CVSnapshot__c/CVSnapshot__c.object-meta.xml
<CustomObject>
    <label>CVSnapshot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CVSnapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>