force-app/main/default/objects/CVSnapshot__c/fields/Additional_info__c.field-meta.xml
<CustomField>
    <fullName>Additional_info__c</fullName>
    <label>Additional info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>