force-app/main/default/objects/CVSnapshot__c/fields/Employement__c.field-meta.xml
<CustomField>
    <fullName>Employement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employement</label>
    <type>Checkbox</type>
</CustomField>