force-app/main/default/objects/CVSnapshot__c/fields/ImageId__c.field-meta.xml
<CustomField>
    <fullName>ImageId__c</fullName>
    <label>ImageId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>