force-app/main/default/objects/CVSnapshot__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>